# bevy_mod_skinned_aabb

./: .gitignore  Cargo.toml  README.md  tracy.ps1  tracy_showcase.ps1
.github/workflows/: ci.yml
assets/: README.md
benches/: bench.rs  benches.rs
dev/: dev.rs
examples/: cpu_skinning.rs  many_foxes.rs  random.rs  showcase.rs
notes/: Benchmarks.md  Performance.md  bevy_0_19.md  bevy_upgrade.md
src/: debug.rs  dev.rs  lib.rs
tests/: tests.rs
