[package]
name = "bevy_mod_skinned_aabb"
version = "0.1.0"
edition = "2021"
keywords = ["bevy"]
categories = ["game-engines"]
authors = ["Greeble <greeble@greeble.dev>"]
repository = "https://github.com/greeble-dev/bevy_mod_skinned_aabb"
license = "MIT OR Apache-2.0"

[dependencies]
bevy_app = { version = "0.15", default-features = false }
bevy_asset = { version = "0.15", default-features = false }
bevy_color = { version = "0.15", default-features = false }
bevy_derive = { version = "0.15", default-features = false }
bevy_ecs = { version = "0.15", default-features = false }
bevy_gizmos = { version = "0.15", default-features = false }
bevy_log = { version = "0.15", default-features = false }
bevy_math = { version = "0.15", default-features = false }
bevy_mesh = { version = "0.15", default-features = false }
bevy_reflect = { version = "0.15", default-features = false }
bevy_render = { version = "0.15", default-features = false }
bevy_transform = { version = "0.15", default-features = false }

# Dependencies used by the crate's internal tests and examples.
bevy_hierarchy = { version = "0.15", optional = true }
bevy_time = { version = "0.15", optional = true }
rand = { version = "0.8", optional = true }
rand_chacha = { version = "0.3", optional = true }
rand_core = { version = "0.6", optional = true }

[dev-dependencies]
bevy_mod_skinned_aabb = { path = ".", features = ["dev"] }
bevy = "0.15"

# Alternative dependencies for testing local changes to bevy crates.
#
# [dependencies]
# bevy_app = { path = "../bevy/crates/bevy_app", default-features = false }
# bevy_asset = { path = "../bevy/crates/bevy_asset", default-features = false }
# bevy_color = { path = "../bevy/crates/bevy_color", default-features = false }
# bevy_derive = { path = "../bevy/crates/bevy_derive", default-features = false }
# bevy_ecs = { path = "../bevy/crates/bevy_ecs", default-features = false }
# bevy_gizmos = { path = "../bevy/crates/bevy_gizmos", default-features = false }
# bevy_log = { path = "../bevy/crates/bevy_log", default-features = false }
# bevy_math = { path = "../bevy/crates/bevy_math", default-features = false }
# bevy_mesh = { path = "../bevy/crates/bevy_mesh", default-features = false }
# bevy_reflect = { path = "../bevy/crates/bevy_reflect", default-features = false }
# bevy_render = { path = "../bevy/crates/bevy_render", default-features = false }
# bevy_transform = { path = "../bevy/crates/bevy_transform", default-features = false }
# 
# [dev-dependencies]
# bevy = { path = "../bevy" }
# rand = "0.8"
# rand_chacha = "0.3"
# rand_core = "0.6"

[profile.release-with-debug]
inherits = "release"
debug = true

[features]
# Enable performance tracing (https://github.com/bevyengine/bevy/blob/main/docs/profiling.md).
trace = []

# Enable utility code used by the crate's internal tests and examples. Crate
# users should not enable this feature.
dev = [
	"dep:bevy_hierarchy",
	"dep:bevy_time",
	"dep:rand",
	"dep:rand_chacha",
	"dep:rand_core",
]

[[example]]
name = "many_foxes"

[[example]]
name = "random"

[[example]]
name = "showcase"
