[package]
name = "bevy_mod_skinned_aabb"
version = "0.1.0"
description = "A Bevy plugin that automatically calculates AABBs for skinned meshes"
authors = ["Greeble <greeble@greeble.dev>"]
repository = "https://github.com/greeble-dev/bevy_mod_skinned_aabb"
license = "MIT OR Apache-2.0"
edition = "2021"
keywords = ["bevy"]
categories = ["game-development"]
exclude = [".github/", "assets/", "notes/"]

[dependencies]
bevy_app = { version = "0.15", default-features = false }
bevy_asset = { version = "0.15", default-features = false }
bevy_color = { version = "0.15", default-features = false }
bevy_derive = { version = "0.15", default-features = false }
bevy_ecs = { version = "0.15", default-features = false }
bevy_gizmos = { version = "0.15", default-features = false }
bevy_log = { version = "0.15", default-features = false }
bevy_math = { version = "0.15", default-features = false }
bevy_mesh = { version = "0.15", default-features = false }
bevy_reflect = { version = "0.15", default-features = false }
bevy_render = { version = "0.15", default-features = false }
bevy_transform = { version = "0.15", default-features = false }

# Dependencies used by the crate's internal tests and examples.
bevy_hierarchy = { version = "0.15", default-features = false, optional = true }
bevy_time = { version = "0.15", default-features = false, optional = true }
bevy_tasks = { version = "0.15", default-features = false, optional = true }
bevy_pbr = { version = "0.15", default-features = false, optional = true }
rand = { version = "0.8", default-features = false, optional = true }
rand_chacha = { version = "0.3", default-features = false, optional = true }
rand_core = { version = "0.6", default-features = false, optional = true }

[dev-dependencies]
bevy_mod_skinned_aabb = { path = ".", features = ["dev"] }
bevy = "0.15"
criterion = { version = "0.5" }

[profile.release-with-debug]
inherits = "release"
debug = true

[features]
# Enable performance tracing (https://github.com/bevyengine/bevy/blob/main/docs/profiling.md).
trace = []

# Enable utility code used by the crate's internal tests and examples. Crate
# users should not enable this feature.
dev = [
	"dep:bevy_hierarchy",
	"dep:bevy_time",
	"dep:bevy_tasks",
	"dep:bevy_pbr",
	"dep:rand",
	"dep:rand_chacha",
	"dep:rand_core",
]

[[bench]]
name = "benches"
harness = false
